--- a/packages/rettangoli-primitives-web/specs/view/bgc/0001.html
+++ b/packages/rettangoli-primitives-web/specs/view/bgc/0001.html
@@ -1,20 +1,13 @@
 ---
-layout: default-layout.html
-tags: [test]
+title: "Background Color"
 ---
 
 <rtgl-view d="h" g="l" p="l" wh="f" fw="w">
-  <rtgl-view bgc="su" wh="80" g="m" p="m"> </rtgl-view>
-  <rtgl-view bgc="sucl" wh="80" g="m" p="m"> </rtgl-view>
-  <rtgl-view bgc="suc" wh="80" g="m" p="m"> </rtgl-view>
-  <rtgl-view bgc="such" wh="80" g="m" p="m"> </rtgl-view>
-  <rtgl-view bgc="p" wh="80" g="m" p="m"> </rtgl-view>
-  <rtgl-view bgc="pc" wh="80" g="m" p="m"> </rtgl-view>
-  <rtgl-view bgc="s" wh="80" g="m" p="m"> </rtgl-view>
-  <rtgl-view bgc="sc" wh="80" g="m" p="m"> </rtgl-view>
-  <rtgl-view bgc="e" wh="80" g="m" p="m"></rtgl-view>
-  <rtgl-view bgc="ec" wh="80" g="m" p="m"></rtgl-view>
-  <rtgl-view bgc="isu" wh="80" g="m" p="m"> </rtgl-view>
-  <rtgl-view bgc="o" wh="80" g="m" p="m"></rtgl-view>
-  <rtgl-view bgc="ov" wh="80" g="m" p="m"></rtgl-view>
+  <rtgl-view bgc="pr" wh="20"> </rtgl-view>
+  <rtgl-view bgc="se" wh="20"> </rtgl-view>
+  <rtgl-view bgc="de" wh="20"> </rtgl-view>
+  <rtgl-view bgc="bg" wh="20"> </rtgl-view>
+  <rtgl-view bgc="mu" wh="20"> </rtgl-view>
+  <rtgl-view bgc="ac" wh="20"> </rtgl-view>
+  <rtgl-view bgc="bo" wh="20"> </rtgl-view>
 </rtgl-view>
