--- a/packages/rettangoli-primitives-web/specs/view/bgc/0002.html
+++ b/packages/rettangoli-primitives-web/specs/view/bgc/0002.html
@@ -1,6 +1,5 @@
 ---
-layout: default-layout.html
-tags: [test]
+title: "Background color with hover"
 ---
 
 <!--
@@ -62,9 +61,9 @@ screen-instruc-end
 
 <rtgl-view g="s" p="l" wh="f" fw="w">
   <rtgl-view d="h">
-    <rtgl-view h-bgc="su" wh="40" g="m" p="m"> </rtgl-view>
-    <rtgl-view h-bgc="sucl" wh="40" g="m" p="m"> </rtgl-view>
-    <rtgl-view h-bgc="suc" wh="40" g="m" p="m"> </rtgl-view>
+    <rtgl-view h-bgc="ac" wh="40" g="m" p="m"> </rtgl-view>
+    <rtgl-view h-bgc="mu" wh="40" g="m" p="m"> </rtgl-view>
+    <rtgl-view h-bgc="mu" wh="40" g="m" p="m"> </rtgl-view>
     <rtgl-view h-bgc="such" wh="40" g="m" p="m"> </rtgl-view>
     <rtgl-view h-bgc="p" wh="40" g="m" p="m"> </rtgl-view>
     <rtgl-view h-bgc="pc" wh="40" g="m" p="m"> </rtgl-view>
@@ -78,19 +77,19 @@ screen-instruc-end
   </rtgl-view>
 
   <rtgl-view d="h">
-    <rtgl-view bgc="sucl" h-bgc="su" wh="40" g="m" p="m"> </rtgl-view>
-    <rtgl-view bgc="sucl" h-bgc="sucl" wh="40" g="m" p="m"> </rtgl-view>
-    <rtgl-view bgc="sucl" h-bgc="suc" wh="40" g="m" p="m"> </rtgl-view>
-    <rtgl-view bgc="sucl" h-bgc="such" wh="40" g="m" p="m"> </rtgl-view>
-    <rtgl-view bgc="sucl" h-bgc="p" wh="40" g="m" p="m"> </rtgl-view>
-    <rtgl-view bgc="sucl" h-bgc="pc" wh="40" g="m" p="m"> </rtgl-view>
-    <rtgl-view bgc="sucl" h-bgc="s" wh="40" g="m" p="m"> </rtgl-view>
-    <rtgl-view bgc="sucl" h-bgc="sc" wh="40" g="m" p="m"> </rtgl-view>
-    <rtgl-view bgc="sucl" h-bgc="e" wh="40" g="m" p="m"></rtgl-view>
-    <rtgl-view bgc="sucl" h-bgc="ec" wh="40" g="m" p="m"></rtgl-view>
-    <rtgl-view bgc="sucl" h-bgc="isu" wh="40" g="m" p="m"> </rtgl-view>
-    <rtgl-view bgc="sucl" h-bgc="o" wh="40" g="m" p="m"></rtgl-view>
-    <rtgl-view bgc="sucl" h-bgc="ov" wh="40" g="m" p="m"></rtgl-view>
+    <rtgl-view bgc="mu" h-bgc="ac" wh="40" g="m" p="m"> </rtgl-view>
+    <rtgl-view bgc="mu" h-bgc="mu" wh="40" g="m" p="m"> </rtgl-view>
+    <rtgl-view bgc="mu" h-bgc="mu" wh="40" g="m" p="m"> </rtgl-view>
+    <rtgl-view bgc="mu" h-bgc="such" wh="40" g="m" p="m"> </rtgl-view>
+    <rtgl-view bgc="mu" h-bgc="p" wh="40" g="m" p="m"> </rtgl-view>
+    <rtgl-view bgc="mu" h-bgc="pc" wh="40" g="m" p="m"> </rtgl-view>
+    <rtgl-view bgc="mu" h-bgc="s" wh="40" g="m" p="m"> </rtgl-view>
+    <rtgl-view bgc="mu" h-bgc="sc" wh="40" g="m" p="m"> </rtgl-view>
+    <rtgl-view bgc="mu" h-bgc="e" wh="40" g="m" p="m"></rtgl-view>
+    <rtgl-view bgc="mu" h-bgc="ec" wh="40" g="m" p="m"></rtgl-view>
+    <rtgl-view bgc="mu" h-bgc="isu" wh="40" g="m" p="m"> </rtgl-view>
+    <rtgl-view bgc="mu" h-bgc="o" wh="40" g="m" p="m"></rtgl-view>
+    <rtgl-view bgc="mu" h-bgc="ov" wh="40" g="m" p="m"></rtgl-view>
   </rtgl-view>
 
 </rtgl-view>
