--- a/packages/rettangoli-primitives-web/specs/view/border/0001.html
+++ b/packages/rettangoli-primitives-web/specs/view/border/0001.html
@@ -1,34 +1,34 @@
 ---
-title: View - Border Width
+title: Border width
 ---
 <rtgl-view d="h" g="m" p="l" wh="f" fw="w">
-    <rtgl-view bgc="sucl" bw="xs" bc="p" wh="50" p="m"></rtgl-view>
-    <rtgl-view bgc="sucl" bw="s" bc="p" wh="50" p="m"></rtgl-view>
-    <rtgl-view bgc="sucl" bw="m" bc="p" wh="50" p="m"></rtgl-view>
-    <rtgl-view bgc="sucl" bw="l" bc="p" wh="50" p="m"></rtgl-view>
-    <rtgl-view bgc="sucl" bw="xl" bc="p" wh="50" p="m"></rtgl-view>
+    <rtgl-view bgc="mu" bw="xs" wh="50"></rtgl-view>
+    <rtgl-view bgc="mu" bw="s" wh="50"></rtgl-view>
+    <rtgl-view bgc="mu" bw="m" wh="50"></rtgl-view>
+    <rtgl-view bgc="mu" bw="l" wh="50"></rtgl-view>
+    <rtgl-view bgc="mu" bw="xl" wh="50"></rtgl-view>
 
-    <rtgl-view bgc="sucl" bwt="xs" bc="p" wh="50" p="m"></rtgl-view>
-    <rtgl-view bgc="sucl" bwt="s" bc="p" wh="50" p="m"></rtgl-view>
-    <rtgl-view bgc="sucl" bwt="m" bc="p" wh="50" p="m"></rtgl-view>
-    <rtgl-view bgc="sucl" bwt="l" bc="p" wh="50" p="m"></rtgl-view>
-    <rtgl-view bgc="sucl" bwt="xl" bc="p" wh="50" p="m"></rtgl-view>
+    <rtgl-view bgc="mu" bwt="xs" wh="50"></rtgl-view>
+    <rtgl-view bgc="mu" bwt="s" wh="50"></rtgl-view>
+    <rtgl-view bgc="mu" bwt="m" wh="50"></rtgl-view>
+    <rtgl-view bgc="mu" bwt="l" wh="50"></rtgl-view>
+    <rtgl-view bgc="mu" bwt="xl" wh="50"></rtgl-view>
 
-    <rtgl-view bgc="sucl" bwr="xs" bc="p" wh="50" p="m"></rtgl-view>
-    <rtgl-view bgc="sucl" bwr="s" bc="p" wh="50" p="m"></rtgl-view>
-    <rtgl-view bgc="sucl" bwr="m" bc="p" wh="50" p="m"></rtgl-view>
-    <rtgl-view bgc="sucl" bwr="l" bc="p" wh="50" p="m"></rtgl-view>
-    <rtgl-view bgc="sucl" bwr="xl" bc="p" wh="50" p="m"></rtgl-view>
+    <rtgl-view bgc="mu" bwr="xs" wh="50"></rtgl-view>
+    <rtgl-view bgc="mu" bwr="s" wh="50"></rtgl-view>
+    <rtgl-view bgc="mu" bwr="m" wh="50"></rtgl-view>
+    <rtgl-view bgc="mu" bwr="l" wh="50"></rtgl-view>
+    <rtgl-view bgc="mu" bwr="xl" wh="50"></rtgl-view>
 
-    <rtgl-view bgc="sucl" bwb="xs" bc="p" wh="50" p="m"></rtgl-view>
-    <rtgl-view bgc="sucl" bwb="s" bc="p" wh="50" p="m"></rtgl-view>
-    <rtgl-view bgc="sucl" bwb="m" bc="p" wh="50" p="m"></rtgl-view>
-    <rtgl-view bgc="sucl" bwb="l" bc="p" wh="50" p="m"></rtgl-view>
-    <rtgl-view bgc="sucl" bwb="xl" bc="p" wh="50" p="m"></rtgl-view>
+    <rtgl-view bgc="mu" bwb="xs" wh="50"></rtgl-view>
+    <rtgl-view bgc="mu" bwb="s" wh="50"></rtgl-view>
+    <rtgl-view bgc="mu" bwb="m" wh="50"></rtgl-view>
+    <rtgl-view bgc="mu" bwb="l" wh="50"></rtgl-view>
+    <rtgl-view bgc="mu" bwb="xl" wh="50"></rtgl-view>
 
-    <rtgl-view bgc="sucl" bwl="xs" bc="p" wh="50" p="m"></rtgl-view>
-    <rtgl-view bgc="sucl" bwl="s" bc="p" wh="50" p="m"></rtgl-view>
-    <rtgl-view bgc="sucl" bwl="m" bc="p" wh="50" p="m"></rtgl-view>
-    <rtgl-view bgc="sucl" bwl="l" bc="p" wh="50" p="m"></rtgl-view>
-    <rtgl-view bgc="sucl" bwl="xl" bc="p" wh="50" p="m"></rtgl-view>
+    <rtgl-view bgc="mu" bwl="xs" wh="50"></rtgl-view>
+    <rtgl-view bgc="mu" bwl="s" wh="50"></rtgl-view>
+    <rtgl-view bgc="mu" bwl="m" wh="50"></rtgl-view>
+    <rtgl-view bgc="mu" bwl="l" wh="50"></rtgl-view>
+    <rtgl-view bgc="mu" bwl="xl" wh="50"></rtgl-view>
 </rtgl-view>
