--- a/packages/rettangoli-primitives-web/specs/view/hidden/0001.html
+++ b/packages/rettangoli-primitives-web/specs/view/hidden/0001.html
@@ -1,9 +1,9 @@
 ---
-title: View - Hidden
+title: Hidden
 ---
 <rtgl-view d="h" g="l" p="l" wh="f" fw="w">
-    <rtgl-view d="h" bgc="sucl" wh="100" >
+    <rtgl-view d="h" bgc="mu" wh="100" >
     </rtgl-view>
-    <rtgl-view hidden d="h" bgc="sucl" wh="100">
+    <rtgl-view hidden d="h" bgc="mu" wh="100">
     </rtgl-view>
 </rtgl-view>
