--- a/packages/rettangoli-primitives-web/specs/view/opacity/0001.html
+++ b/packages/rettangoli-primitives-web/specs/view/opacity/0001.html
@@ -1,8 +1,8 @@
 ---
-title: View - Opacity
+title: Opacity
 ---
 <rtgl-view d="h" g="l" p="l" wh="f">
-    <rtgl-view bgc="sucl" wh="100" o="0.1"></rtgl-view>
-    <rtgl-view bgc="sucl" wh="100" o="0.5"></rtgl-view>
-    <rtgl-view bgc="sucl" wh="100" o="1"></rtgl-view>
+    <rtgl-view bgc="mu" wh="100" o="0.1"></rtgl-view>
+    <rtgl-view bgc="mu" wh="100" o="0.5"></rtgl-view>
+    <rtgl-view bgc="mu" wh="100" o="1"></rtgl-view>
 </rtgl-view>
