--- a/packages/rettangoli-primitives-web/specs/view/overflow/0001.html
+++ b/packages/rettangoli-primitives-web/specs/view/overflow/0001.html
@@ -1,59 +1,59 @@
 ---
-title: View - Overflow
+title: Overflow
 ---
 <rtgl-view d="h" g="l" p="l" wh="f">
-    <rtgl-view bgc="sucl" g="m" wh="40" sv>
-        <rtgl-view wh="12" bgc="su"></rtgl-view>
-        <rtgl-view wh="12" bgc="su"></rtgl-view>
-        <rtgl-view wh="12" bgc="su"></rtgl-view>
-        <rtgl-view wh="12" bgc="su"></rtgl-view>
+    <rtgl-view bgc="mu" g="m" wh="40" sv>
+        <rtgl-view wh="12" bgc="ac"></rtgl-view>
+        <rtgl-view wh="12" bgc="ac"></rtgl-view>
+        <rtgl-view wh="12" bgc="ac"></rtgl-view>
+        <rtgl-view wh="12" bgc="ac"></rtgl-view>
     </rtgl-view>
 
-    <rtgl-view bgc="sucl" g="m" wh="40" sh>
-        <rtgl-view wh="12" bgc="su"></rtgl-view>
-        <rtgl-view wh="12" bgc="su"></rtgl-view>
-        <rtgl-view wh="12" bgc="su"></rtgl-view>
-        <rtgl-view wh="12" bgc="su"></rtgl-view>
+    <rtgl-view bgc="mu" g="m" wh="40" sh>
+        <rtgl-view wh="12" bgc="ac"></rtgl-view>
+        <rtgl-view wh="12" bgc="ac"></rtgl-view>
+        <rtgl-view wh="12" bgc="ac"></rtgl-view>
+        <rtgl-view wh="12" bgc="ac"></rtgl-view>
     </rtgl-view>
 
-    <rtgl-view bgc="sucl" g="m" wh="40" sh d="h">
-        <rtgl-view wh="12" bgc="su"></rtgl-view>
-        <rtgl-view wh="12" bgc="su"></rtgl-view>
-        <rtgl-view wh="12" bgc="su"></rtgl-view>
-        <rtgl-view wh="12" bgc="su"></rtgl-view>
+    <rtgl-view bgc="mu" g="m" wh="40" sh d="h">
+        <rtgl-view wh="12" bgc="ac"></rtgl-view>
+        <rtgl-view wh="12" bgc="ac"></rtgl-view>
+        <rtgl-view wh="12" bgc="ac"></rtgl-view>
+        <rtgl-view wh="12" bgc="ac"></rtgl-view>
     </rtgl-view>
 
-    <rtgl-view bgc="sucl" g="m" wh="40" sh>
-        <rtgl-view wh="12" bgc="su"></rtgl-view>
-        <rtgl-view wh="12" bgc="su"></rtgl-view>
-        <rtgl-view wh="12" bgc="su"></rtgl-view>
-        <rtgl-view wh="12" bgc="su"></rtgl-view>
+    <rtgl-view bgc="mu" g="m" wh="40" sh>
+        <rtgl-view wh="12" bgc="ac"></rtgl-view>
+        <rtgl-view wh="12" bgc="ac"></rtgl-view>
+        <rtgl-view wh="12" bgc="ac"></rtgl-view>
+        <rtgl-view wh="12" bgc="ac"></rtgl-view>
     </rtgl-view>
 
-    <rtgl-view bgc="sucl" g="m" wh="40">
-        <rtgl-view wh="12" bgc="su"></rtgl-view>
-        <rtgl-view wh="12" bgc="su"></rtgl-view>
-        <rtgl-view wh="12" bgc="su"></rtgl-view>
+    <rtgl-view bgc="mu" g="m" wh="40">
+        <rtgl-view wh="12" bgc="ac"></rtgl-view>
+        <rtgl-view wh="12" bgc="ac"></rtgl-view>
+        <rtgl-view wh="12" bgc="ac"></rtgl-view>
     </rtgl-view>
 
-    <rtgl-view bgc="sucl" g="m" wh="40" overflow="hidden">
-        <rtgl-view wh="12" bgc="su"></rtgl-view>
-        <rtgl-view wh="12" bgc="su"></rtgl-view>
-        <rtgl-view wh="12" bgc="su"></rtgl-view>
+    <rtgl-view bgc="mu" g="m" wh="40" overflow="hidden">
+        <rtgl-view wh="12" bgc="ac"></rtgl-view>
+        <rtgl-view wh="12" bgc="ac"></rtgl-view>
+        <rtgl-view wh="12" bgc="ac"></rtgl-view>
     </rtgl-view>
 
-    <rtgl-view bgc="sucl" g="m" wh="40" fw="w">
-        <rtgl-view wh="12" bgc="su"></rtgl-view>
-        <rtgl-view wh="12" bgc="su"></rtgl-view>
-        <rtgl-view wh="12" bgc="su"></rtgl-view>
+    <rtgl-view bgc="mu" g="m" wh="40" fw="w">
+        <rtgl-view wh="12" bgc="ac"></rtgl-view>
+        <rtgl-view wh="12" bgc="ac"></rtgl-view>
+        <rtgl-view wh="12" bgc="ac"></rtgl-view>
     </rtgl-view>
 
-    <rtgl-view bgc="sucl" g="m" wh="40" fw="w">
-        <rtgl-view wh="12" bgc="su"></rtgl-view>
-        <rtgl-view wh="12" bgc="su"></rtgl-view>
-        <rtgl-view wh="12" bgc="su"></rtgl-view>
-        <rtgl-view wh="12" bgc="su"></rtgl-view>
-        <rtgl-view wh="12" bgc="su"></rtgl-view>
+    <rtgl-view bgc="mu" g="m" wh="40" fw="w">
+        <rtgl-view wh="12" bgc="ac"></rtgl-view>
+        <rtgl-view wh="12" bgc="ac"></rtgl-view>
+        <rtgl-view wh="12" bgc="ac"></rtgl-view>
+        <rtgl-view wh="12" bgc="ac"></rtgl-view>
+        <rtgl-view wh="12" bgc="ac"></rtgl-view>
     </rtgl-view>
 
 </rtgl-view>
