--- a/packages/rettangoli-primitives-web/specs/view/position/0001.html
+++ b/packages/rettangoli-primitives-web/specs/view/position/0001.html
@@ -1,9 +1,9 @@
 ---
-title: View - Position absolute (top and bottom)
+title: Position absolute (top and bottom)
 ---
 <rtgl-view d="h" g="l" p="l" wh="f">
-    <rtgl-view bgc="sucl" pos="fix" cor="top" h="100">
+    <rtgl-view bgc="mu" pos="fix" cor="top" h="100">
     </rtgl-view>
-    <rtgl-view bgc="sucl" pos="fix" cor="bottom" h="100">
+    <rtgl-view bgc="mu" pos="fix" cor="bottom" h="100">
     </rtgl-view>
 </rtgl-view>
