--- a/packages/rettangoli-primitives-web/specs/view/position/0003.html
+++ b/packages/rettangoli-primitives-web/specs/view/position/0003.html
@@ -1,28 +1,28 @@
 ---
-title: View - Position relative
+title: Position relative
 ---
 <rtgl-view d="h" g="l" p="l" wh="f">
-    <rtgl-view bgc="sucl" wh="80" pos="rel">
-        <rtgl-view pos="abs" cor="bottom" bgc="su" h="24"></rtgl-view>
-        <rtgl-view pos="abs" cor="top" bgc="su" h="24"></rtgl-view>
+    <rtgl-view bgc="mu" wh="80" pos="rel">
+        <rtgl-view pos="abs" cor="bottom" bgc="ac" h="24"></rtgl-view>
+        <rtgl-view pos="abs" cor="top" bgc="ac" h="24"></rtgl-view>
     </rtgl-view>
-    <rtgl-view bgc="sucl" wh="80" pos="rel">
-        <rtgl-view pos="abs" cor="right" bgc="su" w="24"></rtgl-view>
-        <rtgl-view pos="abs" cor="left" bgc="su" w="24"></rtgl-view>
+    <rtgl-view bgc="mu" wh="80" pos="rel">
+        <rtgl-view pos="abs" cor="right" bgc="ac" w="24"></rtgl-view>
+        <rtgl-view pos="abs" cor="left" bgc="ac" w="24"></rtgl-view>
     </rtgl-view>
-    <rtgl-view bgc="sucl" wh="80" pos="rel">
-        <rtgl-view pos="abs" cor="full" bgc="su"></rtgl-view>
+    <rtgl-view bgc="mu" wh="80" pos="rel">
+        <rtgl-view pos="abs" cor="full" bgc="ac"></rtgl-view>
     </rtgl-view>
-    <rtgl-view bgc="sucl" wh="80" pos="rel">
-        <rtgl-view pos="abs" cor="full" bgc="su"></rtgl-view>
-        <rtgl-view pos="abs" cor="bottom" bgc="such" h="24"></rtgl-view>
+    <rtgl-view bgc="mu" wh="80" pos="rel">
+        <rtgl-view pos="abs" cor="full" bgc="ac"></rtgl-view>
+        <rtgl-view pos="abs" cor="bottom" bgc="de" h="24"></rtgl-view>
     </rtgl-view>
-    <rtgl-view bgc="sucl" wh="80" pos="rel">
-        <rtgl-view bgc="su" wh="48"></rtgl-view>
-        <rtgl-view pos="abs" cor="top" bgc="such" h="24"></rtgl-view>
+    <rtgl-view bgc="mu" wh="80" pos="rel">
+        <rtgl-view bgc="ac" wh="48"></rtgl-view>
+        <rtgl-view pos="abs" cor="top" bgc="de" h="24"></rtgl-view>
     </rtgl-view>
-    <rtgl-view bgc="sucl" wh="80" pos="rel">
-        <rtgl-view pos="abs" cor="top" bgc="such" h="24"></rtgl-view>
-        <rtgl-view bgc="su" wh="48" z="1"></rtgl-view>
+    <rtgl-view bgc="mu" wh="80" pos="rel">
+        <rtgl-view pos="abs" cor="top" bgc="de" h="24"></rtgl-view>
+        <rtgl-view bgc="ac" wh="48" z="1"></rtgl-view>
     </rtgl-view>
 </rtgl-view>
