--- a/packages/rettangoli-primitives-web/specs/view/responsive/0005.html
+++ b/packages/rettangoli-primitives-web/specs/view/responsive/0005.html
@@ -1,10 +1,9 @@
 ---
-layout: default-layout.html
-tags: [test]
+title: Responsive 5
 ---
 <rtgl-view g="xl" p="l" wh="f">
   <rtgl-view d="h" g="m" h="200">
-    <rtgl-view bgc="sucl"  wh="200" sm-hidden>
+    <rtgl-view bgc="mu"  wh="200" sm-hidden>
     </rtgl-view>
     <rtgl-view bgc="ec"  wh="200" lg-hidden>
     </rtgl-view>
