--- a/packages/rettangoli-primitives-web/specs/view/shadow/0001.html
+++ b/packages/rettangoli-primitives-web/specs/view/shadow/0001.html
@@ -1,8 +1,8 @@
 ---
-title: View - Shadow
+title: Shadow
 ---
 <rtgl-view d="h" g="xl" p="xl" wh="f">
-    <rtgl-view bgc="sucl" wh="50" shadow="s"></rtgl-view>
-    <rtgl-view bgc="sucl" wh="50" shadow="m"></rtgl-view>
-    <rtgl-view bgc="sucl" wh="50" shadow="l"></rtgl-view>
+    <rtgl-view bgc="mu" wh="50" shadow="s"></rtgl-view>
+    <rtgl-view bgc="mu" wh="50" shadow="m"></rtgl-view>
+    <rtgl-view bgc="mu" wh="50" shadow="l"></rtgl-view>
 </rtgl-view>
