--- a/packages/rettangoli-primitives-web/viz/templates/report.html
+++ b/packages/rettangoli-primitives-web/viz/templates/report.html
@@ -24,7 +24,7 @@
   </style>
 </head>
 
-<body>
+<body class="dark">
   <rtgl-view d="h" w="100vw" h="100vh">
     <rtgl-view h="f" w="200" bgc="su">
       <rtgl-view p="s">
