--- a/packages/rettangoli-primitives-web/specs/view/align/0001.html
+++ b/packages/rettangoli-primitives-web/specs/view/align/0001.html
@@ -1,5 +1,5 @@
 ---
-title: View - Align (Single item)
+title: Align (Single item)
 specs:
     - test various combinations of ah and av
 ---
@@ -7,99 +7,99 @@ specs:
 <rtgl-view g="m" p="l" wh="f" fw="w">
 
     <rtgl-view d="h" g="m">
-        <rtgl-view bgc="sucl" wh="40">
-            <rtgl-view bgc="su" wh="12"></rtgl-view>
+        <rtgl-view bgc="mu" wh="40">
+            <rtgl-view bgc="ac" wh="12"></rtgl-view>
         </rtgl-view>
-        <rtgl-view bgc="sucl" wh="40" ah="c">
-            <rtgl-view bgc="su" wh="12"></rtgl-view>
+        <rtgl-view bgc="mu" wh="40" ah="c">
+            <rtgl-view bgc="ac" wh="12"></rtgl-view>
         </rtgl-view>
-        <rtgl-view bgc="sucl" wh="40" ah="e">
-            <rtgl-view bgc="su" wh="12"></rtgl-view>
-        </rtgl-view>
-
-        <rtgl-view d="v" bgc="sucl" wh="40">
-            <rtgl-view bgc="su" wh="12"></rtgl-view>
-        </rtgl-view>
-        <rtgl-view d="v" bgc="sucl" wh="40" ah="c">
-            <rtgl-view bgc="su" wh="12"></rtgl-view>
-        </rtgl-view>
-        <rtgl-view d="v" bgc="sucl" wh="40" ah="e">
-            <rtgl-view bgc="su" wh="12"></rtgl-view>
+        <rtgl-view bgc="mu" wh="40" ah="e">
+            <rtgl-view bgc="ac" wh="12"></rtgl-view>
         </rtgl-view>
 
-        <rtgl-view d="h" bgc="sucl" wh="40">
-            <rtgl-view bgc="su" wh="12"></rtgl-view>
+        <rtgl-view d="v" bgc="mu" wh="40">
+            <rtgl-view bgc="ac" wh="12"></rtgl-view>
         </rtgl-view>
-        <rtgl-view d="h" bgc="sucl" wh="40" ah="c">
-            <rtgl-view bgc="su" wh="12"></rtgl-view>
+        <rtgl-view d="v" bgc="mu" wh="40" ah="c">
+            <rtgl-view bgc="ac" wh="12"></rtgl-view>
         </rtgl-view>
-        <rtgl-view d="h" bgc="sucl" wh="40" ah="e">
-            <rtgl-view bgc="su" wh="12"></rtgl-view>
+        <rtgl-view d="v" bgc="mu" wh="40" ah="e">
+            <rtgl-view bgc="ac" wh="12"></rtgl-view>
+        </rtgl-view>
+
+        <rtgl-view d="h" bgc="mu" wh="40">
+            <rtgl-view bgc="ac" wh="12"></rtgl-view>
+        </rtgl-view>
+        <rtgl-view d="h" bgc="mu" wh="40" ah="c">
+            <rtgl-view bgc="ac" wh="12"></rtgl-view>
+        </rtgl-view>
+        <rtgl-view d="h" bgc="mu" wh="40" ah="e">
+            <rtgl-view bgc="ac" wh="12"></rtgl-view>
         </rtgl-view>
     </rtgl-view>
 
     <rtgl-view d="h" g="m">
-        <rtgl-view bgc="sucl" wh="40" av="c">
-            <rtgl-view bgc="su" wh="12"></rtgl-view>
+        <rtgl-view bgc="mu" wh="40" av="c">
+            <rtgl-view bgc="ac" wh="12"></rtgl-view>
         </rtgl-view>
-        <rtgl-view bgc="sucl" wh="40" ah="c" av="c">
-            <rtgl-view bgc="su" wh="12"></rtgl-view>
+        <rtgl-view bgc="mu" wh="40" ah="c" av="c">
+            <rtgl-view bgc="ac" wh="12"></rtgl-view>
         </rtgl-view>
-        <rtgl-view bgc="sucl" wh="40" ah="e" av="c">
-            <rtgl-view bgc="su" wh="12"></rtgl-view>
-        </rtgl-view>
-
-        <rtgl-view d="v" bgc="sucl" wh="40" av="c">
-            <rtgl-view bgc="su" wh="12"></rtgl-view>
-        </rtgl-view>
-        <rtgl-view d="v" bgc="sucl" wh="40" ah="c" av="c">
-            <rtgl-view bgc="su" wh="12"></rtgl-view>
-        </rtgl-view>
-        <rtgl-view d="v" bgc="sucl" wh="40" ah="e" av="c">
-            <rtgl-view bgc="su" wh="12"></rtgl-view>
+        <rtgl-view bgc="mu" wh="40" ah="e" av="c">
+            <rtgl-view bgc="ac" wh="12"></rtgl-view>
         </rtgl-view>
 
-        <rtgl-view d="h" bgc="sucl" wh="40" av="c">
-            <rtgl-view bgc="su" wh="12"></rtgl-view>
+        <rtgl-view d="v" bgc="mu" wh="40" av="c">
+            <rtgl-view bgc="ac" wh="12"></rtgl-view>
         </rtgl-view>
-        <rtgl-view d="h" bgc="sucl" wh="40" ah="c" av="c">
-            <rtgl-view bgc="su" wh="12"></rtgl-view>
+        <rtgl-view d="v" bgc="mu" wh="40" ah="c" av="c">
+            <rtgl-view bgc="ac" wh="12"></rtgl-view>
         </rtgl-view>
-        <rtgl-view d="h" bgc="sucl" wh="40" ah="e" av="c">
-            <rtgl-view bgc="su" wh="12"></rtgl-view>
+        <rtgl-view d="v" bgc="mu" wh="40" ah="e" av="c">
+            <rtgl-view bgc="ac" wh="12"></rtgl-view>
+        </rtgl-view>
+
+        <rtgl-view d="h" bgc="mu" wh="40" av="c">
+            <rtgl-view bgc="ac" wh="12"></rtgl-view>
+        </rtgl-view>
+        <rtgl-view d="h" bgc="mu" wh="40" ah="c" av="c">
+            <rtgl-view bgc="ac" wh="12"></rtgl-view>
+        </rtgl-view>
+        <rtgl-view d="h" bgc="mu" wh="40" ah="e" av="c">
+            <rtgl-view bgc="ac" wh="12"></rtgl-view>
         </rtgl-view>
     </rtgl-view>
 
     <rtgl-view d="h" g="m">
-        <rtgl-view bgc="sucl" wh="40" av="e">
-            <rtgl-view bgc="su" wh="12"></rtgl-view>
+        <rtgl-view bgc="mu" wh="40" av="e">
+            <rtgl-view bgc="ac" wh="12"></rtgl-view>
         </rtgl-view>
-        <rtgl-view bgc="sucl" wh="40" ah="c" av="e">
-            <rtgl-view bgc="su" wh="12"></rtgl-view>
+        <rtgl-view bgc="mu" wh="40" ah="c" av="e">
+            <rtgl-view bgc="ac" wh="12"></rtgl-view>
         </rtgl-view>
-        <rtgl-view bgc="sucl" wh="40" ah="e" av="e">
-            <rtgl-view bgc="su" wh="12"></rtgl-view>
-        </rtgl-view>
-
-        <rtgl-view d="v" bgc="sucl" wh="40" av="e">
-            <rtgl-view bgc="su" wh="12"></rtgl-view>
-        </rtgl-view>
-        <rtgl-view d="v" bgc="sucl" wh="40" ah="c" av="e">
-            <rtgl-view bgc="su" wh="12"></rtgl-view>
+        <rtgl-view bgc="mu" wh="40" ah="e" av="e">
+            <rtgl-view bgc="ac" wh="12"></rtgl-view>
         </rtgl-view>
 
-        <rtgl-view d="v" bgc="sucl" wh="40" ah="e" av="e">
-            <rtgl-view bgc="su" wh="12"></rtgl-view>
+        <rtgl-view d="v" bgc="mu" wh="40" av="e">
+            <rtgl-view bgc="ac" wh="12"></rtgl-view>
+        </rtgl-view>
+        <rtgl-view d="v" bgc="mu" wh="40" ah="c" av="e">
+            <rtgl-view bgc="ac" wh="12"></rtgl-view>
         </rtgl-view>
 
-        <rtgl-view d="h" bgc="sucl" wh="40" av="e">
-            <rtgl-view bgc="su" wh="12"></rtgl-view>
+        <rtgl-view d="v" bgc="mu" wh="40" ah="e" av="e">
+            <rtgl-view bgc="ac" wh="12"></rtgl-view>
         </rtgl-view>
-        <rtgl-view d="h" bgc="sucl" wh="40" ah="c" av="e">
-            <rtgl-view bgc="su" wh="12"></rtgl-view>
+
+        <rtgl-view d="h" bgc="mu" wh="40" av="e">
+            <rtgl-view bgc="ac" wh="12"></rtgl-view>
         </rtgl-view>
-        <rtgl-view d="h" bgc="sucl" wh="40" ah="e" av="e">
-            <rtgl-view bgc="su" wh="12"></rtgl-view>
+        <rtgl-view d="h" bgc="mu" wh="40" ah="c" av="e">
+            <rtgl-view bgc="ac" wh="12"></rtgl-view>
+        </rtgl-view>
+        <rtgl-view d="h" bgc="mu" wh="40" ah="e" av="e">
+            <rtgl-view bgc="ac" wh="12"></rtgl-view>
         </rtgl-view>
     </rtgl-view>
 
