--- a/packages/rettangoli-primitives-web/specs/view/align/0005.html
+++ b/packages/rettangoli-primitives-web/specs/view/align/0005.html
@@ -1,24 +1,23 @@
 ---
-layout: default-layout.html
-tags: [test]
+title: Align (mixed items)
 ---
 
 <rtgl-view g="m" p="l" wh="f" fw="w">
   <rtgl-view d="h" g="l">
-    <rtgl-view bgc="sucl" wh="80" g="s">
-      <rtgl-view bgc="suc" h="20" w="20"></rtgl-view>
-      <rtgl-view bgc="suc" h="20" w="f"></rtgl-view>
-      <rtgl-view bgc="suc" h="20" stretch></rtgl-view>
+    <rtgl-view bgc="mu" wh="80" g="s">
+      <rtgl-view bgc="mu" h="20" w="20"></rtgl-view>
+      <rtgl-view bgc="mu" h="20" w="f"></rtgl-view>
+      <rtgl-view bgc="mu" h="20" stretch></rtgl-view>
     </rtgl-view>
-    <rtgl-view bgc="sucl" wh="80" g="s" d="h">
-      <rtgl-view bgc="suc" h="20" w="20"></rtgl-view>
-      <rtgl-view bgc="suc" h="f" w="20"></rtgl-view>
-      <rtgl-view bgc="suc" stretch w="20"></rtgl-view>
+    <rtgl-view bgc="mu" wh="80" g="s" d="h">
+      <rtgl-view bgc="mu" h="20" w="20"></rtgl-view>
+      <rtgl-view bgc="mu" h="f" w="20"></rtgl-view>
+      <rtgl-view bgc="mu" stretch w="20"></rtgl-view>
     </rtgl-view>
   </rtgl-view>
 
   <rtgl-view d="h" g="l">
-    <rtgl-view d="h" flex="1" bgc="sucl" av="c" pr="m">
+    <rtgl-view d="h" flex="1" bgc="mu" av="c" pr="m">
       <rtgl-image src="/public/sample1.jpg" h="64"></rtgl-image>
       <rtgl-view bgc="such" flex="1" av="c" pl="m">
         <rtgl-text s="bm" c="">Title</rtgl-text>
@@ -28,7 +27,7 @@ tags: [test]
       </rtgl-view>
     </rtgl-view>
 
-    <rtgl-view d="h" flex="1" bgc="sucl" av="c" h="100">
+    <rtgl-view d="h" flex="1" bgc="mu" av="c" h="100">
       <rtgl-image src="/public/sample1.jpg" h="64"></rtgl-image>
       <rtgl-view bgc="such" flex="1" av="c" pl="m">
         <rtgl-text s="bm" c="">Title</rtgl-text>
@@ -38,7 +37,7 @@ tags: [test]
       </rtgl-view>
     </rtgl-view>
 
-    <rtgl-view d="h" flex="1" bgc="sucl" av="c" h="100" w="200">
+    <rtgl-view d="h" flex="1" bgc="mu" av="c" h="100" w="200">
       <rtgl-image src="/public/sample1.jpg" h="64"></rtgl-image>
       <rtgl-view bgc="such" flex="1" av="c" pl="m">
         <rtgl-text s="bm" c="">Title</rtgl-text>
@@ -50,7 +49,7 @@ tags: [test]
   </rtgl-view>
 
   <rtgl-view d="h" g="l">
-    <rtgl-view flex="1" bgc="sucl" av="c"  ah="c" w="200">
+    <rtgl-view flex="1" bgc="mu" av="c"  ah="c" w="200">
       <rtgl-image src="/public/sample1.jpg" h="64"></rtgl-image>
       <rtgl-view bgc="such" flex="1" av="c" pl="m">
         <rtgl-text s="bm" c="">Title</rtgl-text>
@@ -59,7 +58,7 @@ tags: [test]
         ><rtgl-text s="bm" c="">Price</rtgl-text>
       </rtgl-view>
     </rtgl-view>
-    <rtgl-view flex="1" bgc="sucl" av="c" ah="c" w="200">
+    <rtgl-view flex="1" bgc="mu" av="c" ah="c" w="200">
       <rtgl-image src="/public/sample1.jpg" h="64"></rtgl-image>
       <rtgl-view bgc="such" flex="1" av="c" pl="m">
         <rtgl-text s="bm" c="">Title</rtgl-text>
