--- a/packages/rettangoli-primitives-web/specs/view/bgc/0003.html
+++ b/packages/rettangoli-primitives-web/specs/view/bgc/0003.html
@@ -1,11 +1,10 @@
 ---
-layout: default-layout.html
-tags: [test]
+title: "Background color (TBD)"
 ---
 
 <rtgl-view d="h" g="l" p="l" wh="f" fw="w">
   <rtgl-view wh="80" g="m" p="m" s-bgc="e"> </rtgl-view>
-  <rtgl-view bgc="sucl" wh="80" g="m" p="m" s-bgc="e"> </rtgl-view>
+  <rtgl-view bgc="mu" wh="80" g="m" p="m" s-bgc="e"> </rtgl-view>
   <rtgl-view wh="80" g="m" p="m" s-h-bgc="e"> </rtgl-view>
-  <rtgl-view bgc="sucl" wh="80" g="m" p="m" s-h-bgc="e"> </rtgl-view>
+  <rtgl-view bgc="mu" wh="80" g="m" p="m" s-h-bgc="e"> </rtgl-view>
 </rtgl-view>
