--- a/packages/rettangoli-primitives-web/specs/view/dimentions/0001.html
+++ b/packages/rettangoli-primitives-web/specs/view/dimentions/0001.html
@@ -1,14 +1,14 @@
 ---
-title: View - Width and height
+title: Dimensions
 specs:
   - w="10" should set the width to 10 in pixels
   - h="10" should set the height to 10 in pixels
   - wh="10" should set the width to 10 and height to 10 in pixels
 ---
-<rtgl-view bgc="sucl" g="l" p="l">
-    <rtgl-view bgc="su" w="10" h="20"></rtgl-view>
-    <rtgl-view bgc="su" w="20" h="10"></rtgl-view>
-    <rtgl-view bgc="su" wh="20"></rtgl-view>
-    <rtgl-view bgc="su" h="20"></rtgl-view>
-    <rtgl-view bgc="su" w="20"></rtgl-view>
+<rtgl-view bgc="mu" g="l" p="l">
+    <rtgl-view bgc="ac" w="10" h="20"></rtgl-view>
+    <rtgl-view bgc="ac" w="20" h="10"></rtgl-view>
+    <rtgl-view bgc="ac" wh="20"></rtgl-view>
+    <rtgl-view bgc="ac" h="20"></rtgl-view>
+    <rtgl-view bgc="ac" w="20"></rtgl-view>
 </rtgl-view>
