--- a/packages/rettangoli-primitives-web/specs/view/dimentions/0002.html
+++ b/packages/rettangoli-primitives-web/specs/view/dimentions/0002.html
@@ -1,11 +1,11 @@
 ---
-title: View - Width and height using viewport
+title: Dimensions width and height using viewport
 specs:
   - w="10vw" should set the width to 10 in viewport width
   - h="10vh" should set the height to 10 in viewport height
   - wh="10vw" should set the width to 10 and height to 10 in viewport width
 ---
-<rtgl-view bgc="sucl" g="l" p="l">
-    <rtgl-view bgc="su" w="10vw" h="10vh"></rtgl-view>
-    <rtgl-view bgc="su" wh="10vw"></rtgl-view>
+<rtgl-view bgc="mu" g="l" p="l">
+    <rtgl-view bgc="ac" w="10vw" h="10vh"></rtgl-view>
+    <rtgl-view bgc="ac" wh="10vw"></rtgl-view>
 </rtgl-view>
