--- a/packages/rettangoli-primitives-web/specs/view/dimentions/0003.html
+++ b/packages/rettangoli-primitives-web/specs/view/dimentions/0003.html
@@ -1,20 +1,20 @@
 ---
-title: View - Width and height using spacing
+title: Dimensions width and height using spacing
 specs:
   - w="s" should set the width to spacing size
   - h="s" should set the height to spacing size
   - wh="s" should set the width and height to spacing size
 ---
-<rtgl-view bgc="sucl" g="l" p="l">
-    <rtgl-view bgc="su" w="xs" h="xs"></rtgl-view>
-    <rtgl-view bgc="su" w="s" h="s"></rtgl-view>
-    <rtgl-view bgc="su" w="m" h="m"></rtgl-view>
-    <rtgl-view bgc="su" w="l" h="l"></rtgl-view>
-    <rtgl-view bgc="su" w="xl" h="xl"></rtgl-view>
+<rtgl-view bgc="mu" g="l" p="l">
+    <rtgl-view bgc="ac" w="xs" h="xs"></rtgl-view>
+    <rtgl-view bgc="ac" w="s" h="s"></rtgl-view>
+    <rtgl-view bgc="ac" w="m" h="m"></rtgl-view>
+    <rtgl-view bgc="ac" w="l" h="l"></rtgl-view>
+    <rtgl-view bgc="ac" w="xl" h="xl"></rtgl-view>
 
-    <rtgl-view bgc="su" wh="xs"></rtgl-view>
-    <rtgl-view bgc="su" wh="s"></rtgl-view>
-    <rtgl-view bgc="su" wh="m"></rtgl-view>
-    <rtgl-view bgc="su" wh="l"></rtgl-view>
-    <rtgl-view bgc="su" wh="xl"></rtgl-view>
+    <rtgl-view bgc="ac" wh="xs"></rtgl-view>
+    <rtgl-view bgc="ac" wh="s"></rtgl-view>
+    <rtgl-view bgc="ac" wh="m"></rtgl-view>
+    <rtgl-view bgc="ac" wh="l"></rtgl-view>
+    <rtgl-view bgc="ac" wh="xl"></rtgl-view>
 </rtgl-view>
