--- a/packages/rettangoli-primitives-web/specs/view/dimentions/0004.html
+++ b/packages/rettangoli-primitives-web/specs/view/dimentions/0004.html
@@ -1,18 +1,18 @@
 ---
-title: View - Full height and width
+title: Dimensions full height and width
 specs:
   - w="f" should fill the width
   - h="f" should fill the height
   - wf="f" should fill the width and height
 ---
-<rtgl-view bgc="sucl" g="l" p="l" w="100" h="100">
-    <rtgl-view bgc="su" w="20" h="f"></rtgl-view>
+<rtgl-view bgc="mu" g="l" p="l" w="100" h="100">
+    <rtgl-view bgc="ac" w="20" h="f"></rtgl-view>
 </rtgl-view>
 
-<rtgl-view bgc="sucl" g="l" p="l" w="100" h="100">
-    <rtgl-view bgc="su" w="f" h="20"></rtgl-view>
+<rtgl-view bgc="mu" g="l" p="l" w="100" h="100">
+    <rtgl-view bgc="ac" w="f" h="20"></rtgl-view>
 </rtgl-view>
 
-<rtgl-view bgc="sucl" g="l" p="l" w="100" h="100">
-    <rtgl-view bgc="su" wh="f"></rtgl-view>
+<rtgl-view bgc="mu" g="l" p="l" w="100" h="100">
+    <rtgl-view bgc="ac" wh="f"></rtgl-view>
 </rtgl-view>
