--- a/packages/rettangoli-primitives-web/specs/view/gap/0001.html
+++ b/packages/rettangoli-primitives-web/specs/view/gap/0001.html
@@ -1,47 +1,47 @@
 ---
-title: View - Gap
+title: Gap
 specs:
   - g="xs" should set the gap to spacing size
 ---
 <rtgl-view d="h" g="l" p="l" wh="f" fw="w">
-    <rtgl-view d="h" bgc="sucl" w="100" g="xs" p="m" fw="w">
-        <rtgl-view bgc="su" wh="20"></rtgl-view>
-        <rtgl-view bgc="su" wh="20"></rtgl-view>
-        <rtgl-view bgc="su" wh="20"></rtgl-view>
-        <rtgl-view bgc="su" wh="20"></rtgl-view>
-        <rtgl-view bgc="su" wh="20"></rtgl-view>
-        <rtgl-view bgc="su" wh="20"></rtgl-view>
+    <rtgl-view d="h" bgc="mu" w="100" g="xs" p="m" fw="w">
+        <rtgl-view bgc="ac" wh="20"></rtgl-view>
+        <rtgl-view bgc="ac" wh="20"></rtgl-view>
+        <rtgl-view bgc="ac" wh="20"></rtgl-view>
+        <rtgl-view bgc="ac" wh="20"></rtgl-view>
+        <rtgl-view bgc="ac" wh="20"></rtgl-view>
+        <rtgl-view bgc="ac" wh="20"></rtgl-view>
     </rtgl-view>
-    <rtgl-view d="h" bgc="sucl" w="100" g="s" p="m" fw="w">
-        <rtgl-view bgc="su" wh="20"></rtgl-view>
-        <rtgl-view bgc="su" wh="20"></rtgl-view>
-        <rtgl-view bgc="su" wh="20"></rtgl-view>
-        <rtgl-view bgc="su" wh="20"></rtgl-view>
-        <rtgl-view bgc="su" wh="20"></rtgl-view>
-        <rtgl-view bgc="su" wh="20"></rtgl-view>
+    <rtgl-view d="h" bgc="mu" w="100" g="s" p="m" fw="w">
+        <rtgl-view bgc="ac" wh="20"></rtgl-view>
+        <rtgl-view bgc="ac" wh="20"></rtgl-view>
+        <rtgl-view bgc="ac" wh="20"></rtgl-view>
+        <rtgl-view bgc="ac" wh="20"></rtgl-view>
+        <rtgl-view bgc="ac" wh="20"></rtgl-view>
+        <rtgl-view bgc="ac" wh="20"></rtgl-view>
     </rtgl-view>
-    <rtgl-view d="h" bgc="sucl" w="100" g="m" p="m" fw="w">
-        <rtgl-view bgc="su" wh="20"></rtgl-view>
-        <rtgl-view bgc="su" wh="20"></rtgl-view>
-        <rtgl-view bgc="su" wh="20"></rtgl-view>
-        <rtgl-view bgc="su" wh="20"></rtgl-view>
-        <rtgl-view bgc="su" wh="20"></rtgl-view>
-        <rtgl-view bgc="su" wh="20"></rtgl-view>
+    <rtgl-view d="h" bgc="mu" w="100" g="m" p="m" fw="w">
+        <rtgl-view bgc="ac" wh="20"></rtgl-view>
+        <rtgl-view bgc="ac" wh="20"></rtgl-view>
+        <rtgl-view bgc="ac" wh="20"></rtgl-view>
+        <rtgl-view bgc="ac" wh="20"></rtgl-view>
+        <rtgl-view bgc="ac" wh="20"></rtgl-view>
+        <rtgl-view bgc="ac" wh="20"></rtgl-view>
     </rtgl-view>
-    <rtgl-view d="h" bgc="sucl" w="100" g="l" p="m" fw="w">
-        <rtgl-view bgc="su" wh="20"></rtgl-view>
-        <rtgl-view bgc="su" wh="20"></rtgl-view>
-        <rtgl-view bgc="su" wh="20"></rtgl-view>
-        <rtgl-view bgc="su" wh="20"></rtgl-view>
-        <rtgl-view bgc="su" wh="20"></rtgl-view>
-        <rtgl-view bgc="su" wh="20"></rtgl-view>
+    <rtgl-view d="h" bgc="mu" w="100" g="l" p="m" fw="w">
+        <rtgl-view bgc="ac" wh="20"></rtgl-view>
+        <rtgl-view bgc="ac" wh="20"></rtgl-view>
+        <rtgl-view bgc="ac" wh="20"></rtgl-view>
+        <rtgl-view bgc="ac" wh="20"></rtgl-view>
+        <rtgl-view bgc="ac" wh="20"></rtgl-view>
+        <rtgl-view bgc="ac" wh="20"></rtgl-view>
     </rtgl-view>
-    <rtgl-view d="h" bgc="sucl" w="100" g="xl" p="m" fw="w">
-        <rtgl-view bgc="su" wh="20"></rtgl-view>
-        <rtgl-view bgc="su" wh="20"></rtgl-view>
-        <rtgl-view bgc="su" wh="20"></rtgl-view>
-        <rtgl-view bgc="su" wh="20"></rtgl-view>
-        <rtgl-view bgc="su" wh="20"></rtgl-view>
-        <rtgl-view bgc="su" wh="20"></rtgl-view>
+    <rtgl-view d="h" bgc="mu" w="100" g="xl" p="m" fw="w">
+        <rtgl-view bgc="ac" wh="20"></rtgl-view>
+        <rtgl-view bgc="ac" wh="20"></rtgl-view>
+        <rtgl-view bgc="ac" wh="20"></rtgl-view>
+        <rtgl-view bgc="ac" wh="20"></rtgl-view>
+        <rtgl-view bgc="ac" wh="20"></rtgl-view>
+        <rtgl-view bgc="ac" wh="20"></rtgl-view>
     </rtgl-view>
 </rtgl-view>
