--- a/packages/rettangoli-primitives-web/specs/view/gap/0003.html
+++ b/packages/rettangoli-primitives-web/specs/view/gap/0003.html
@@ -1,47 +1,47 @@
 ---
-title: View - Gap Vertical
+title: Gap Vertical
 specs:
   - gv="xs" should set the vertical gap to spacing size
 ---
 <rtgl-view d="h" g="l" p="l" wh="f" fw="w">
-    <rtgl-view d="h" bgc="sucl" w="100" gv="xs" p="m" fw="w">
-        <rtgl-view bgc="su" wh="20"></rtgl-view>
-        <rtgl-view bgc="su" wh="20"></rtgl-view>
-        <rtgl-view bgc="su" wh="20"></rtgl-view>
-        <rtgl-view bgc="su" wh="20"></rtgl-view>
-        <rtgl-view bgc="su" wh="20"></rtgl-view>
-        <rtgl-view bgc="su" wh="20"></rtgl-view>
+    <rtgl-view d="h" bgc="mu" w="100" gv="xs" p="m" fw="w">
+        <rtgl-view bgc="ac" wh="20"></rtgl-view>
+        <rtgl-view bgc="ac" wh="20"></rtgl-view>
+        <rtgl-view bgc="ac" wh="20"></rtgl-view>
+        <rtgl-view bgc="ac" wh="20"></rtgl-view>
+        <rtgl-view bgc="ac" wh="20"></rtgl-view>
+        <rtgl-view bgc="ac" wh="20"></rtgl-view>
     </rtgl-view>
-    <rtgl-view d="h" bgc="sucl" w="100" gv="s" p="m" fw="w">
-        <rtgl-view bgc="su" wh="20"></rtgl-view>
-        <rtgl-view bgc="su" wh="20"></rtgl-view>
-        <rtgl-view bgc="su" wh="20"></rtgl-view>
-        <rtgl-view bgc="su" wh="20"></rtgl-view>
-        <rtgl-view bgc="su" wh="20"></rtgl-view>
-        <rtgl-view bgc="su" wh="20"></rtgl-view>
+    <rtgl-view d="h" bgc="mu" w="100" gv="s" p="m" fw="w">
+        <rtgl-view bgc="ac" wh="20"></rtgl-view>
+        <rtgl-view bgc="ac" wh="20"></rtgl-view>
+        <rtgl-view bgc="ac" wh="20"></rtgl-view>
+        <rtgl-view bgc="ac" wh="20"></rtgl-view>
+        <rtgl-view bgc="ac" wh="20"></rtgl-view>
+        <rtgl-view bgc="ac" wh="20"></rtgl-view>
     </rtgl-view>
-    <rtgl-view d="h" bgc="sucl" w="100" gv="m" p="m" fw="w">
-        <rtgl-view bgc="su" wh="20"></rtgl-view>
-        <rtgl-view bgc="su" wh="20"></rtgl-view>
-        <rtgl-view bgc="su" wh="20"></rtgl-view>
-        <rtgl-view bgc="su" wh="20"></rtgl-view>
-        <rtgl-view bgc="su" wh="20"></rtgl-view>
-        <rtgl-view bgc="su" wh="20"></rtgl-view>
+    <rtgl-view d="h" bgc="mu" w="100" gv="m" p="m" fw="w">
+        <rtgl-view bgc="ac" wh="20"></rtgl-view>
+        <rtgl-view bgc="ac" wh="20"></rtgl-view>
+        <rtgl-view bgc="ac" wh="20"></rtgl-view>
+        <rtgl-view bgc="ac" wh="20"></rtgl-view>
+        <rtgl-view bgc="ac" wh="20"></rtgl-view>
+        <rtgl-view bgc="ac" wh="20"></rtgl-view>
     </rtgl-view>
-    <rtgl-view d="h" bgc="sucl" w="100" gv="l" p="m" fw="w">
-        <rtgl-view bgc="su" wh="20"></rtgl-view>
-        <rtgl-view bgc="su" wh="20"></rtgl-view>
-        <rtgl-view bgc="su" wh="20"></rtgl-view>
-        <rtgl-view bgc="su" wh="20"></rtgl-view>
-        <rtgl-view bgc="su" wh="20"></rtgl-view>
-        <rtgl-view bgc="su" wh="20"></rtgl-view>
+    <rtgl-view d="h" bgc="mu" w="100" gv="l" p="m" fw="w">
+        <rtgl-view bgc="ac" wh="20"></rtgl-view>
+        <rtgl-view bgc="ac" wh="20"></rtgl-view>
+        <rtgl-view bgc="ac" wh="20"></rtgl-view>
+        <rtgl-view bgc="ac" wh="20"></rtgl-view>
+        <rtgl-view bgc="ac" wh="20"></rtgl-view>
+        <rtgl-view bgc="ac" wh="20"></rtgl-view>
     </rtgl-view>
-    <rtgl-view d="h" bgc="sucl" w="100" gv="xl" p="m" fw="w">
-        <rtgl-view bgc="su" wh="20"></rtgl-view>
-        <rtgl-view bgc="su" wh="20"></rtgl-view>
-        <rtgl-view bgc="su" wh="20"></rtgl-view>
-        <rtgl-view bgc="su" wh="20"></rtgl-view>
-        <rtgl-view bgc="su" wh="20"></rtgl-view>
-        <rtgl-view bgc="su" wh="20"></rtgl-view>
+    <rtgl-view d="h" bgc="mu" w="100" gv="xl" p="m" fw="w">
+        <rtgl-view bgc="ac" wh="20"></rtgl-view>
+        <rtgl-view bgc="ac" wh="20"></rtgl-view>
+        <rtgl-view bgc="ac" wh="20"></rtgl-view>
+        <rtgl-view bgc="ac" wh="20"></rtgl-view>
+        <rtgl-view bgc="ac" wh="20"></rtgl-view>
+        <rtgl-view bgc="ac" wh="20"></rtgl-view>
     </rtgl-view>
 </rtgl-view>
