--- a/packages/rettangoli-primitives-web/specs/view/padding/0001.html
+++ b/packages/rettangoli-primitives-web/specs/view/padding/0001.html
@@ -1,116 +1,116 @@
 ---
-title: View - Padding
+title: Padding
 ---
 <rtgl-view d="h" g="l" p="l" wh="f" fw="w">
-    <rtgl-view bgc="sucl" pt="xs">
-        <rtgl-view bgc="su" wh="50"></rtgl-view>
+    <rtgl-view bgc="mu" pt="xs">
+        <rtgl-view bgc="ac" wh="50"></rtgl-view>
     </rtgl-view>
-    <rtgl-view bgc="sucl" pt="s">
-        <rtgl-view bgc="su" wh="50"></rtgl-view>
+    <rtgl-view bgc="mu" pt="s">
+        <rtgl-view bgc="ac" wh="50"></rtgl-view>
     </rtgl-view>
-    <rtgl-view bgc="sucl" pt="m">
-        <rtgl-view bgc="su" wh="50"></rtgl-view>
+    <rtgl-view bgc="mu" pt="m">
+        <rtgl-view bgc="ac" wh="50"></rtgl-view>
     </rtgl-view>
-    <rtgl-view bgc="sucl" pt="l">
-        <rtgl-view bgc="su" wh="50"></rtgl-view>
+    <rtgl-view bgc="mu" pt="l">
+        <rtgl-view bgc="ac" wh="50"></rtgl-view>
     </rtgl-view>
-    <rtgl-view bgc="sucl" pt="xl">
-        <rtgl-view bgc="su" wh="50"></rtgl-view>
-    </rtgl-view>
-
-    <rtgl-view bgc="sucl" pr="xs">
-        <rtgl-view bgc="su" wh="50"></rtgl-view>
-    </rtgl-view>
-    <rtgl-view bgc="sucl" pr="s">
-        <rtgl-view bgc="su" wh="50"></rtgl-view>
-    </rtgl-view>
-    <rtgl-view bgc="sucl" pr="m">
-        <rtgl-view bgc="su" wh="50"></rtgl-view>
-    </rtgl-view>
-    <rtgl-view bgc="sucl" pr="l">
-        <rtgl-view bgc="su" wh="50"></rtgl-view>
-    </rtgl-view>
-    <rtgl-view bgc="sucl" pr="xl">
-        <rtgl-view bgc="su" wh="50"></rtgl-view>
+    <rtgl-view bgc="mu" pt="xl">
+        <rtgl-view bgc="ac" wh="50"></rtgl-view>
     </rtgl-view>
 
-    <rtgl-view bgc="sucl" pl="xs">
-        <rtgl-view bgc="su" wh="50"></rtgl-view>
+    <rtgl-view bgc="mu" pr="xs">
+        <rtgl-view bgc="ac" wh="50"></rtgl-view>
     </rtgl-view>
-    <rtgl-view bgc="sucl" pl="s">
-        <rtgl-view bgc="su" wh="50"></rtgl-view>
+    <rtgl-view bgc="mu" pr="s">
+        <rtgl-view bgc="ac" wh="50"></rtgl-view>
     </rtgl-view>
-    <rtgl-view bgc="sucl" pl="m">
-        <rtgl-view bgc="su" wh="50"></rtgl-view>
+    <rtgl-view bgc="mu" pr="m">
+        <rtgl-view bgc="ac" wh="50"></rtgl-view>
     </rtgl-view>
-    <rtgl-view bgc="sucl" pl="l">
-        <rtgl-view bgc="su" wh="50"></rtgl-view>
+    <rtgl-view bgc="mu" pr="l">
+        <rtgl-view bgc="ac" wh="50"></rtgl-view>
     </rtgl-view>
-    <rtgl-view bgc="sucl" pl="xl">
-        <rtgl-view bgc="su" wh="50"></rtgl-view>
-    </rtgl-view>
-
-    <rtgl-view bgc="sucl" pb="xs">
-        <rtgl-view bgc="su" wh="50"></rtgl-view>
-    </rtgl-view>
-    <rtgl-view bgc="sucl" pb="s">
-        <rtgl-view bgc="su" wh="50"></rtgl-view>
-    </rtgl-view>
-    <rtgl-view bgc="sucl" pb="m">
-        <rtgl-view bgc="su" wh="50"></rtgl-view>
-    </rtgl-view>
-    <rtgl-view bgc="sucl" pb="l">
-        <rtgl-view bgc="su" wh="50"></rtgl-view>
-    </rtgl-view>
-    <rtgl-view bgc="sucl" pb="xl">
-        <rtgl-view bgc="su" wh="50"></rtgl-view>
+    <rtgl-view bgc="mu" pr="xl">
+        <rtgl-view bgc="ac" wh="50"></rtgl-view>
     </rtgl-view>
 
-    <rtgl-view bgc="sucl" p="xs">
-        <rtgl-view bgc="su" wh="50"></rtgl-view>
+    <rtgl-view bgc="mu" pl="xs">
+        <rtgl-view bgc="ac" wh="50"></rtgl-view>
     </rtgl-view>
-    <rtgl-view bgc="sucl" p="s">
-        <rtgl-view bgc="su" wh="50"></rtgl-view>
+    <rtgl-view bgc="mu" pl="s">
+        <rtgl-view bgc="ac" wh="50"></rtgl-view>
     </rtgl-view>
-    <rtgl-view bgc="sucl" p="m">
-        <rtgl-view bgc="su" wh="50"></rtgl-view>
+    <rtgl-view bgc="mu" pl="m">
+        <rtgl-view bgc="ac" wh="50"></rtgl-view>
     </rtgl-view>
-    <rtgl-view bgc="sucl" p="l">
-        <rtgl-view bgc="su" wh="50"></rtgl-view>
+    <rtgl-view bgc="mu" pl="l">
+        <rtgl-view bgc="ac" wh="50"></rtgl-view>
     </rtgl-view>
-    <rtgl-view bgc="sucl" p="xl">
-        <rtgl-view bgc="su" wh="50"></rtgl-view>
-    </rtgl-view>
-
-    <rtgl-view bgc="sucl" ph="xs">
-        <rtgl-view bgc="su" wh="50"></rtgl-view>
-    </rtgl-view>
-    <rtgl-view bgc="sucl" ph="s">
-        <rtgl-view bgc="su" wh="50"></rtgl-view>
-    </rtgl-view>
-    <rtgl-view bgc="sucl" ph="m">
-        <rtgl-view bgc="su" wh="50"></rtgl-view>
-    </rtgl-view>
-    <rtgl-view bgc="sucl" ph="l">
-        <rtgl-view bgc="su" wh="50"></rtgl-view>
-    </rtgl-view>
-    <rtgl-view bgc="sucl" ph="xl">
-        <rtgl-view bgc="su" wh="50"></rtgl-view>
+    <rtgl-view bgc="mu" pl="xl">
+        <rtgl-view bgc="ac" wh="50"></rtgl-view>
     </rtgl-view>
 
-    <rtgl-view bgc="sucl" pv="xs">
-        <rtgl-view bgc="su" wh="50"></rtgl-view>
+    <rtgl-view bgc="mu" pb="xs">
+        <rtgl-view bgc="ac" wh="50"></rtgl-view>
     </rtgl-view>
-    <rtgl-view bgc="sucl" pv="s">
-        <rtgl-view bgc="su" wh="50"></rtgl-view>
+    <rtgl-view bgc="mu" pb="s">
+        <rtgl-view bgc="ac" wh="50"></rtgl-view>
     </rtgl-view>
-    <rtgl-view bgc="sucl" pv="m">
-        <rtgl-view bgc="su" wh="50"></rtgl-view>
+    <rtgl-view bgc="mu" pb="m">
+        <rtgl-view bgc="ac" wh="50"></rtgl-view>
     </rtgl-view>
-    <rtgl-view bgc="sucl" pv="l">
-        <rtgl-view bgc="su" wh="50"></rtgl-view>
+    <rtgl-view bgc="mu" pb="l">
+        <rtgl-view bgc="ac" wh="50"></rtgl-view>
     </rtgl-view>
-    <rtgl-view bgc="sucl" pv="xl">
-        <rtgl-view bgc="su" wh="50"></rtgl-view>
+    <rtgl-view bgc="mu" pb="xl">
+        <rtgl-view bgc="ac" wh="50"></rtgl-view>
+    </rtgl-view>
+
+    <rtgl-view bgc="mu" p="xs">
+        <rtgl-view bgc="ac" wh="50"></rtgl-view>
+    </rtgl-view>
+    <rtgl-view bgc="mu" p="s">
+        <rtgl-view bgc="ac" wh="50"></rtgl-view>
+    </rtgl-view>
+    <rtgl-view bgc="mu" p="m">
+        <rtgl-view bgc="ac" wh="50"></rtgl-view>
+    </rtgl-view>
+    <rtgl-view bgc="mu" p="l">
+        <rtgl-view bgc="ac" wh="50"></rtgl-view>
+    </rtgl-view>
+    <rtgl-view bgc="mu" p="xl">
+        <rtgl-view bgc="ac" wh="50"></rtgl-view>
+    </rtgl-view>
+
+    <rtgl-view bgc="mu" ph="xs">
+        <rtgl-view bgc="ac" wh="50"></rtgl-view>
+    </rtgl-view>
+    <rtgl-view bgc="mu" ph="s">
+        <rtgl-view bgc="ac" wh="50"></rtgl-view>
+    </rtgl-view>
+    <rtgl-view bgc="mu" ph="m">
+        <rtgl-view bgc="ac" wh="50"></rtgl-view>
+    </rtgl-view>
+    <rtgl-view bgc="mu" ph="l">
+        <rtgl-view bgc="ac" wh="50"></rtgl-view>
+    </rtgl-view>
+    <rtgl-view bgc="mu" ph="xl">
+        <rtgl-view bgc="ac" wh="50"></rtgl-view>
+    </rtgl-view>
+
+    <rtgl-view bgc="mu" pv="xs">
+        <rtgl-view bgc="ac" wh="50"></rtgl-view>
+    </rtgl-view>
+    <rtgl-view bgc="mu" pv="s">
+        <rtgl-view bgc="ac" wh="50"></rtgl-view>
+    </rtgl-view>
+    <rtgl-view bgc="mu" pv="m">
+        <rtgl-view bgc="ac" wh="50"></rtgl-view>
+    </rtgl-view>
+    <rtgl-view bgc="mu" pv="l">
+        <rtgl-view bgc="ac" wh="50"></rtgl-view>
+    </rtgl-view>
+    <rtgl-view bgc="mu" pv="xl">
+        <rtgl-view bgc="ac" wh="50"></rtgl-view>
     </rtgl-view>
 </rtgl-view>
