--- a/packages/rettangoli-primitives-web/specs/view/position/0002.html
+++ b/packages/rettangoli-primitives-web/specs/view/position/0002.html
@@ -1,9 +1,9 @@
 ---
-title: View - Position absolute (left and right)
+title: Position absolute (left and right)
 ---
 <rtgl-view d="h" g="l" p="l" wh="f">
-    <rtgl-view bgc="sucl" pos="fix" cor="left" w="100">
+    <rtgl-view bgc="mu" pos="fix" cor="left" w="100">
     </rtgl-view>
-    <rtgl-view bgc="sucl" pos="fix" cor="right" w="100"">
+    <rtgl-view bgc="mu" pos="fix" cor="right" w="100"">
     </rtgl-view>
 </rtgl-view>
