--- a/packages/rettangoli-primitives-web/specs/view/responsive/0002.html
+++ b/packages/rettangoli-primitives-web/specs/view/responsive/0002.html
@@ -1,8 +1,7 @@
 ---
-layout: default-layout.html
-tags: [test]
+title: Responsive 2
 ---
 <rtgl-view d="h" g="l" p="l" wh="f">
-    <rtgl-view bgc="sucl" sm-w="100" md-w="200" lg-w="300" xl-w="400" w="500" h="200">
+    <rtgl-view bgc="mu" sm-w="100" md-w="200" lg-w="300" xl-w="400" w="500" h="200">
     </rtgl-view>
 </rtgl-view>
