--- a/packages/rettangoli-primitives-web/specs/view/responsive/0003.html
+++ b/packages/rettangoli-primitives-web/specs/view/responsive/0003.html
@@ -1,8 +1,7 @@
 ---
-layout: default-layout.html
-tags: [test]
+title: Responsive 3
 ---
 <rtgl-view d="h" g="l" p="l" wh="f">
-    <rtgl-view bgc="sucl"  lg-w="300" w="500" h="200">
+    <rtgl-view bgc="mu"  lg-w="300" w="500" h="200">
     </rtgl-view>
 </rtgl-view>
