--- a/packages/rettangoli-primitives-web/specs/view/responsive/0004.html
+++ b/packages/rettangoli-primitives-web/specs/view/responsive/0004.html
@@ -1,6 +1,5 @@
 ---
-layout: default-layout.html
-tags: [test]
+title: Responsive 4
 ---
 <rtgl-view g="xl" p="l" wh="f">
   <rtgl-view d="h" g="m" h="200">
