--- a/packages/rettangoli-primitives-web/specs/view/zindex/0001.html
+++ b/packages/rettangoli-primitives-web/specs/view/zindex/0001.html
@@ -1,22 +1,22 @@
 ---
-title: View - Z-index
+title: Z-index
 ---
 
 <rtgl-view d="h" g="l" p="l" wh="f">
-  <rtgl-view bgc="sucl" wh="120" pos="rel">
+  <rtgl-view bgc="mu" wh="120" pos="rel">
     <rtgl-view pos="abs" bgc="e" wh="84"></rtgl-view>
     <rtgl-view pos="abs" bgc="such" wh="64"></rtgl-view>
-    <rtgl-view pos="abs" bgc="suc" wh="48"></rtgl-view>
+    <rtgl-view pos="abs" bgc="mu" wh="48"></rtgl-view>
   </rtgl-view>
 
-  <rtgl-view bgc="sucl" wh="120" pos="rel">
+  <rtgl-view bgc="mu" wh="120" pos="rel">
     <rtgl-view pos="abs" bgc="e" wh="84" z="1"></rtgl-view>
     <rtgl-view pos="abs" bgc="such" wh="64"></rtgl-view>
-    <rtgl-view pos="abs" bgc="suc" wh="48"></rtgl-view>
+    <rtgl-view pos="abs" bgc="mu" wh="48"></rtgl-view>
   </rtgl-view>
 
-  <rtgl-view bgc="sucl" wh="120" pos="rel">
-    <rtgl-view pos="abs" bgc="suc" wh="48" z="3"></rtgl-view>
+  <rtgl-view bgc="mu" wh="120" pos="rel">
+    <rtgl-view pos="abs" bgc="mu" wh="48" z="3"></rtgl-view>
     <rtgl-view pos="abs" bgc="such" wh="64" z="2"></rtgl-view>
     <rtgl-view pos="abs" bgc="e" wh="84" z="1"></rtgl-view>
   </rtgl-view>
