--- a/packages/rettangoli-primitives-web/viz/templates/index.html
+++ b/packages/rettangoli-primitives-web/viz/templates/index.html
@@ -18,45 +18,79 @@
   <script src="/public/rettangoli.js"></script>
 
   <style>
+    pre {
+      width: 100%;
+      margin: 0px;
+    }
+
     code {
       white-space: pre-wrap;
       display: block;
       overflow: auto;
       max-height: 400px;
-      background-color: var(--color-surface-container-low);
       word-break: break-all;
+      padding: 1rem;
+      width: -webkit-fill-available;
     }
+
     iframe {
       height: 400px;
       border: none;
+      border-color: var(--border);
+      border-width: 1px;
+      border-style: solid;
+      box-sizing: border-box;
     }
   </style>
 </head>
 
-<body>
+<body class="dark">
   <rtgl-view d="h" w="100vw" h="100vh">
-    <rtgl-view h="f" w="200" bgc="su">
+    <rtgl-view h="f" w="272" bwr="xs">
       <rtgl-view p="s">
-        <rtgl-text s="tl" c="primary">Rettangoli Components</rtgl-text>
-        <rtgl-text s="sm">{{ files.length }} components</rtgl-text>
+        <rtgl-text s="h4" c="primary">Rettangoli test suite</rtgl-text>
+      </rtgl-view>
+      <rtgl-view w="f">
+        {% for section in sections %}
+        <a style="display: contents; text-decoration: none; color: inherit;" href="/{{ section.title | slug }}">
+          <rtgl-view h="36" av="c" ph="m" w="f" h-bgc="mu"
+            bgc="{% if currentSection.title == section.title %}mu{% else %}bg{% endif %}" cur="p">
+            <rtgl-text s="sm">{{ section.title }}</rtgl-text>
+          </rtgl-view>
+        </a>
+        {% endfor %}
       </rtgl-view>
     </rtgl-view>
-    <rtgl-view h="100vh" w="f" flex="1" bgc="su" p="l" g="l" style="flex-wrap: nowrap;" sv>
-      {% for file in files %}
-      <rtgl-view id="{{ file.frontMatter.title | slug }}" w="f">
-        <a style="display: contents; text-decoration: none; color: inherit;" href="#{{ file.frontMatter.title | slug }}">
-          <rtgl-text s="tl">{{ file.frontMatter.title | default: file.path }}</rtgl-text>
-        </a>
-        <rtgl-view w="f" d="h" g="l">
-          <rtgl-view flex="1" bgc="suc" p="l">
-            <code>{{ file.content | escape }}</code>
-          </rtgl-view>
-          <rtgl-view flex="1">
-            <iframe loading="lazy" width="100%" src="/artifacts/{{ file.path }}" frameborder="0"></iframe>
+    <rtgl-view h="100vh" w="f" flex="1" p="l" g="l" style="flex-wrap: nowrap;" sv ah="c">
+      <rtgl-view w="800" g="xl">
+        <rtgl-text s="h2">{{ currentSection.title }} </rtgl-text>
+        {% for file in files %}
+        <rtgl-view id="{{ file.frontMatter.title | slug }}" w="f">
+          <a style="display: contents; text-decoration: none; color: inherit;"
+            href="#{{ file.frontMatter.title | slug }}">
+            <rtgl-text s="h3">{{ file.frontMatter.title | default: file.path }}</rtgl-text>
+          </a>
+          <rtgl-view w="f" g="l" mt="s">
+            <rtgl-view w="f">
+              {{ file.contentShiki }}
+            </rtgl-view>
+            <rtgl-view w="f">
+              <iframe loading="lazy" width="100%" src="/artifacts/{{ file.path }}" frameborder="0"></iframe>
+            </rtgl-view>
           </rtgl-view>
         </rtgl-view>
+        {% endfor %}
       </rtgl-view>
-      {% endfor %}
+    </rtgl-view>
+    <rtgl-view h="f" w="272">
+      <rtgl-view w="f" g="s" mt="xl">
+        {% for file in files %}
+        <a style="display: contents; text-decoration: none; color: inherit;"
+          href="#{{ file.frontMatter.title | slug }}">
+          <rtgl-text s="sm">{{ file.frontMatter.title }}</rtgl-text>
+        </a>
+        {% endfor %}
+      </rtgl-view>
     </rtgl-view>
   </rtgl-view>
 </body>
