update rtgl-view opacity attribute add bgc=fg

--- a/packages/rettangoli-ui/viz/specs/view/bgc/0001.html
+++ b/packages/rettangoli-ui/viz/specs/view/bgc/0001.html
@@ -7,7 +7,11 @@ title: "Background Color"
   <rtgl-view bgc="se" wh="20"> </rtgl-view>
   <rtgl-view bgc="de" wh="20"> </rtgl-view>
   <rtgl-view bgc="bg" wh="20"> </rtgl-view>
+  <rtgl-view bgc="pr" wh="20" ah="c" av="c">
+    <rtgl-view bgc="bg" wh="16"> </rtgl-view>
+  </rtgl-view>
   <rtgl-view bgc="mu" wh="20"> </rtgl-view>
   <rtgl-view bgc="ac" wh="20"> </rtgl-view>
   <rtgl-view bgc="bo" wh="20"> </rtgl-view>
+  <rtgl-view bgc="fg" wh="20"> </rtgl-view>
 </rtgl-view>
